<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/marksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="SomeText"
        app:layout_constraintStart_toStartOf="@+id/marksRadioGroup"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBaseline_toBaselineOf="@id/marksRadioGroup" />

    <RadioGroup
        android:id="@+id/marksRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marksText">

        <RadioButton
            android:id="@+id/marksRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mark2"
            app:layout_constraintStart_toEndOf="@+id/marksText"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/marksRadioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mark3"
            app:layout_constraintStart_toEndOf="@+id/marksRadioButton2"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/marksRadioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mark4"
            app:layout_constraintStart_toEndOf="@+id/marksRadioButton3"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/marksRadioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mark5"
            app:layout_constraintStart_toEndOf="@+id/marksRadioButton4"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>